@@ -1,3 +1,8 @@
+2010-05-21  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub-mkconfig.in: Fix handling of -o so that it works when
+	not the first option.
+
 2010-05-20  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-mkrelpath.c (usage): Remove excess apostrophe.
